--- a/html_css/style.css
+++ b/html_css/style.css
@@ -4,6 +4,13 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }*/
+.slide{
+	width: 100%;
+	height: 68px;
+	direction: right;
+	background-color:lightblue;
+	color:white;
+}
 h6{
 	font-weight:normal;color:red;
 }
